--- a/rs-selectors/src/components/helpers/shelter.css
+++ b/rs-selectors/src/components/helpers/shelter.css
@@ -1,5 +1,5 @@
 .main_heading {
-  color: rgba(255, 255, 255, 0.3);
+  color: rgba(181, 144, 126, 0.7);
   font-size: 45px;
   margin: 0;
   font-weight: 400;
@@ -9,8 +9,8 @@
 
 .main_help {
   margin: 0 auto;
-  background: rgba(0, 0, 0, 0.2);
-  color: rgba(255, 255, 255, 0.3);
+  background: rgba(181, 144, 126, 0.2);
+  color: #fff;
   padding: 8px 15px 10px 15px;
   border-radius: 20px;
   text-decoration: none;
