refactor: transform code from FP to OOP

--- a/rs-selectors/src/app/view/sidebar/sidebar.css
+++ b/rs-selectors/src/app/view/sidebar/sidebar.css
@@ -19,7 +19,7 @@
   margin-bottom: 10px;
   font-size: 1.2rem;
   color: #fff6ed;
-  background-image: url('../../images/not-completed.png');
+  background-image: url('../../../images/not-completed.png');
   background-size: contain;
   background-repeat: no-repeat;
   cursor: pointer;
