--- a/rs-selectors/src/app/view/main/shelter/header/header.css
+++ b/rs-selectors/src/app/view/main/shelter/header/header.css
@@ -1,10 +1,5 @@
-.wrapper {
-  background-color: #fff6ed;
-  width: 70%;
-  height: 100%;
-}
-
 .header {
+  width: 100%;
   padding: 23px 15px 11px 20px;
   display: flex;
   align-items: center;
@@ -13,7 +8,7 @@
 
 .header_logo {
   padding-left: 25px;
-  background-image: url('../../images/favicon.png');
+  background-image: url('../../../../../images/favicon.png');
   background-size: contain;
   background-repeat: no-repeat;
   color: rgba(181, 144, 126, 0.7);
@@ -48,7 +43,7 @@
   color: rgba(181, 144, 126, 0.5);
   text-decoration: none;
   padding-right: 28px;
-  background-image: url('../../images/github-logo.png');
+  background-image: url('../../../../../images/github-logo.png');
   background-size: contain;
   background-position: right;
   background-repeat: no-repeat;
@@ -58,15 +53,4 @@
 
 .header_socials:hover {
   color: rgba(181, 144, 126);
-}
-
-.cat {
-  width: 100px;
-  display: block;
-  height: 100px;
-  background-image: url('../../images/cat.png');
-  background-size: contain;
-  background-position: right;
-  background-repeat: no-repeat;
-  animation: bounce 1s infinite;
 }
