--- a/rs-selectors/src/app/view/main/shelter/editor/editor.css
+++ b/rs-selectors/src/app/view/main/shelter/editor/editor.css
@@ -11,7 +11,7 @@
   width: 50%;
   height: 97%;
   margin: 5px;
-  border-radius: 3px;
+  border-radius: 3px 3px 0 0;
   border: 1px solid rgba(255, 246, 237, 0.8);
 }
 
@@ -74,7 +74,6 @@
   display: flex;
   height: 88.7%;
   background-color: #fff;
-  border-radius: 4px;
 }
 
 .editor_markup {
