--- a/rs-selectors/src/app/view/main/shelter/table/pets-on-table/pet.css
+++ b/rs-selectors/src/app/view/main/shelter/table/pets-on-table/pet.css
@@ -1,5 +1,6 @@
 .table {
   display: flex;
+  align-items: flex-end;
   gap: 10px;
   padding: 20px 30px;
   width: fit-content;
@@ -29,4 +30,27 @@
 
 .dog {
   background-image: url('../../../../../../images/dog.png');
+}
+
+.small-dog {
+  width: 50px;
+  height: 50px;
+}
+
+.humster {
+  background-image: url('../../../../../../images/humster.png');
+  height: 60px;
+  width: 40px;
+}
+
+.cat-bowl {
+  background-image: url('../../../../../../images/cat-bowl.png');
+}
+
+.cat-pillow {
+  background-image: url('../../../../../../images/cat-pillow.png');
+}
+
+.dog-pillow {
+  background-image: url('../../../../../../images/dog-pillow.png');
 }
