--- a/rs-selectors/src/app/view/main/shelter/editor/editor.css
+++ b/rs-selectors/src/app/view/main/shelter/editor/editor.css
@@ -91,3 +91,22 @@
   width: 100%;
   white-space: pre-wrap;
 }
+
+.shake {
+  animation: shake 0.1s 5;
+}
+
+@keyframes shake {
+  0% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateX(-5px);
+  }
+  50% {
+    transform: translateX(0);
+  }
+  75% {
+    transform: translateX(5px);
+  }
+}
