feat: update action for help-btn

--- a/rs-selectors/src/app/view/sidebar/sidebar.css
+++ b/rs-selectors/src/app/view/sidebar/sidebar.css
@@ -39,6 +39,10 @@
   background-image: url('../../../images/completed.png');
 }
 
+.help-used {
+  background-image: url('../../../images/search.png');
+}
+
 .reset-btn {
   width: fit-content;
   margin-top: 15px;
