--- a/rs-selectors/src/app/view/main/shelter/shelter.css
+++ b/rs-selectors/src/app/view/main/shelter/shelter.css
@@ -1,5 +1,5 @@
 .main {
-  background-color: #fff6ed;
+  background-color: var(--main-color);
   width: 100%;
   height: 100%;
 }
@@ -12,7 +12,7 @@
 }
 
 .main_heading {
-  color: rgba(181, 144, 126, 0.7);
+  color: var(--dark-text-color);
   font-size: 45px;
   margin: 0;
   font-weight: 400;
@@ -22,8 +22,8 @@
 
 .main_help {
   margin: 0 auto;
-  background: rgba(181, 144, 126, 0.2);
-  color: #fff;
+  background: var(--help-color);
+  color: var(--white-color);
   padding: 8px 15px 10px 15px;
   border: none;
   border-radius: 20px;
@@ -37,7 +37,7 @@
 }
 
 .help-activated {
-  color: rgba(181, 144, 126, 1);
+  color: var(--sidebar-color);
   white-space: pre-wrap;
 }
 
