--- a/rs-selectors/src/app/view/sidebar/sidebar.css
+++ b/rs-selectors/src/app/view/sidebar/sidebar.css
@@ -4,21 +4,21 @@
   padding: 20px;
   width: 30%;
   height: 100%;
-  background-color: rgb(181, 144, 126);
+  background-color: var(--sidebar-color);
 }
 
 .sidebar-heading {
   font-size: 25px;
   margin: 0;
   padding: 0 0 10px 0;
-  color: #fff6ed;
+  color: var(--main-color);
 }
 
 .level-item {
   padding-left: 30px;
   margin-bottom: 10px;
   font-size: 1.2rem;
-  color: #fff6ed;
+  color: var(--main-color);
   background-image: url('../../../images/not-completed.png');
   background-size: contain;
   background-repeat: no-repeat;
@@ -26,12 +26,12 @@
 }
 
 .level-item:hover {
-  text-shadow: 1px 1px 2px rgb(233, 187, 165);
+  text-shadow: 1px 1px 2px var(--hover-color);
 }
 
 .level-item__selected {
   font-weight: 700;
-  color: #6d6c72;
+  color: var(--level-selected-color);
   background-image: url('../../../images/selected.png');
 }
 
@@ -47,8 +47,8 @@
   width: fit-content;
   margin-top: 15px;
   align-self: center;
-  background: #fff6ed;
-  color: rgb(181, 144, 126);
+  background: var(--main-color);
+  color: var(--sidebar-color);
   padding: 8px 15px 10px 15px;
   border: none;
   border-radius: 20px;
@@ -58,6 +58,6 @@
 }
 
 .reset-btn:hover {
-  box-shadow: 2px 2px 10px #fff;
-  text-shadow: 1px 1px 2px rgb(233, 187, 165);
+  box-shadow: 2px 2px 10px var(--white-color);
+  text-shadow: 1px 1px 2px var(--hover-color);
 }
